plugins/groovy/testdata/highlighting/BreakOutside.groovy
oo:
for (s in ['a', 'b']) {
  for (s1 in ['a', 'b']) {
  }
}

<error descr="The break statement is only allowed inside loops or switches">break</error>; 
